Update index .html

--- a/index .html
+++ b/index .html
@@ -7,7 +7,7 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    <div class="word">
+    <div class="word new 1">
         <div class="main">
            <img src="./Screenshot 2024-10-11 231718.png" alt=""> 
            <div>store</div>
